   warning before)

 o The 'bar.fill' and 'superpose.fill' settings have been replaced
   with 'plot.polygon' and 'superpose.polygon' respectively, which are
   more consistent with other names.


bug fixes
---------

 o NA-handling

 o ltext now supports more 'adj' values

Todo (planned)
--------------

 o change panel.qq so that most work gets done there

 o print shingle levels in strip




Changes in lattice 0.12
=======================

improvements
------------

 o panel.bwplot has a new 'stats' argument, which is a function used to 
   calculate the statistics in the box and whisker plot.  Defaults 
   to boxplot.stats, which was the hard-coded value earlier.

 o panel.bwplot has been re-implemented.  Faster, avoids direct grid
   calls

 o panel.densityplot now allows more flexible specifications of
   'plot.points', specifically, points can be jittered (the new
   default) or indicated by a `rug'.

 o (more) changes in NA-handling.

 o panel.superpose handles type='g' itself so that the grid doesn't
   get repeated for every group.

new features
------------

 o All high level functions are now generic.  This change should be
   mostly transparent, but there may be some unforeseen side-effects.
   S3 generics and methods are used (this may change at some point,
   but not in the near future).  In particular, usage where the first
   argument is not actually a formula has now been formalized and is
   handled via method dispatch rather than the clumsy hacks in place
   earlier.

 o The first argument of high level lattice functions has been renamed
   from 'formula' to 'x'.  This is related to the fact that these
   functions are now generic, and is intended to avoid long-term
   confusion.  The first argument is usually not named, so this should
   not cause many problems.  If the name 'formula' is explicitly
   supplied, it will be used with a warning (as long as there is no
   argument named 'x') for now, but not in future versions of lattice.
